--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
-{"compilerOptions": {
-    "module": "amd",
-    "target": "es5",
-    "sourceMap": true
-}}
+{
+    "compilerOptions": {
+        "module": "amd",
+        "target": "es5",
+        "sourceMap": true
+    },
+    "exclude": [
+        "./node_modules"
+    ]
+}
