--- a/plugin-config.json
+++ b/plugin-config.json
@@ -31,5 +31,8 @@
         {
             "Version": "15.6"
         }
+    ],
+    "MappedPaths": [
+        {"File": "index.cwhtml", "Path": "/"}
     ]
 }
